Add schema functionality done

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 }
 .nameInput {
   padding: 10px;
+  margin-top: 10px;
 }
 
 @media (min-width: 768px) {
@@ -102,6 +103,9 @@
   padding: 10px;
 }
 .schemaDropDownBox {
+  padding: 10px;
+}
+.dropDownOptions {
   padding: 10px;
 }
 .btnSection {
