--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   left: 5%;
   width: 90%;
   background-color: white;
+  height: fit-content;
+  overflow-y: auto;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
